# cpp-qr-clock

./: .clang-format  CMakeLists.txt  README.md
cmake/: dependencies.cmake  dependencyHelpers.cmake  helpers.cmake  quick.cmake
src/: main.cpp
